# interRunner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
rerun/: cmd.py  cmd_line.py  main.py
tests/: conftest.py  test_cmd_line.py
