[tool.poetry]
name = "rerun"
version = "1.0.0"
description = "An utility for running cli apps interactively"
authors = ["Tulili Blossom <tulilirockz.pub@gmail.com>"]
license = "BSD 2-Clause"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.961"
autopep8 = "^1.6.0"
covdefaults = "^2.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=rerun --cov-report term-missing"
testpaths = [
    "tests"
]

[tool.poetry.scripts]
rerun = "rerun.main:main"

[tool.mypy]
mypy_path = "rerun"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = True
    envlist = py310, py311

    [testenv]
    platform = linux
    whitelist_externals = poetry
    commands =
        poetry install -v
        poetry run pytest
"""