[metadata]
name = rerun
version = 1.0.0
description = runnable util for running command-line utilities
author = Pranprest
author_email = 79233261+Pranprest@users.noreply.github.com
url = github.com/Pranprest/rerun

[options]
packages = find:

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    rerun = rerun.main:main
