[metadata]
name = rerun
version = 1.0.0
description = runnable util for running command-line utilities
author = Pranprest
author_email = 79233261+Pranprest@users.noreply.github.com
url = github.com/Pranprest/Rerun

[options]
packages = find:

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    rerun = rerun.main:main

[options.package_data]
rerun = py.typed

[flake8]
max-line-lenght = 160
ignore = E501, F401
